Bug 1586228 - Don't always disable file downloads when parental controls are on in Windows 10. r=aklotz, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D48202